fix spacing on doublechoc

--- a/solution-hw5/src/views/elements/cartRoll.css
+++ b/solution-hw5/src/views/elements/cartRoll.css
@@ -4,7 +4,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 240px;
+    width: 260px;
+    padding: 0px 10px;
     margin-top: 20px;
 }
 
